--- a/package.json
+++ b/package.json
@@ -6,27 +6,39 @@
   "directories": {},
   "dependencies": {
     "async": "~0.6.2",
-    "fs-extra": "~0.8.1",
-    "log4js": "~0.6.12",
-    "mysql": "~2.1.1",
-    "node-schedule": "~0.1.13",
-    "nodeunit": "~0.8.6",
-    "request": "~2.34.0",
-    "redis": "~0.10.1",
-    "url": "~0.7.9",
-    "line-reader": "~0.2.3",
-    "node-fs": "~0.1.7",
-    "nodemailer": "~0.6.1",
+    "async-q": "^0.2.1",
     "bcrypt": "~0.7.7",
-    "colors": "~0.6.2",
+    "body-parser": "^1.0.1",
+    "bower": "^1.3.2",
+    "bower-update": "0.0.2",
     "cluster": "~0.7.7",
-    "express": "~3.5.1",
+    "colors": "~0.6.2",
+    "compression": "^1.0.1",
+    "connect-redis": "^2.0.0",
+    "cookie-parser": "^1.0.1",
+    "cookie-session": "^1.0.1",
     "crypto": "0.0.3",
+    "csurf": "^1.1.0",
+    "express": "~4.0.0",
+    "express-session": "^1.0.2",
+    "fs-extra": "~0.8.1",
     "ftp": "~0.3.6",
+    "line-reader": "~0.2.3",
+    "log4js": "~0.6.12",
     "mongodb": "~1.4.0",
+    "mysql": "~2.1.1",
     "mysql-queues": "~1.0.0",
+    "node-fs": "~0.1.7",
+    "node-schedule": "~0.1.13",
+    "nodemailer": "~0.6.1",
+    "nodeunit": "~0.8.6",
+    "passport": "^0.2.0",
+    "q": "^1.0.1",
+    "redis": "~0.10.1",
+    "request": "~2.34.0",
     "sequelize": "~1.7.0",
-    "q": "^1.0.1"
+    "serve-static": "^1.0.4",
+    "url": "~0.7.9"
   },
   "author": "stanley",
   "license": "BSD",
