--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "connect-redis": "^2.0.0",
     "cookie-parser": "^1.0.1",
     "cookie-session": "^1.0.1",
+    "cors": "^2.2.0",
     "crypto": "0.0.3",
     "csurf": "^1.1.0",
     "express": "~4.0.0",
+    "express-jwt": "^0.1.3",
     "express-session": "^1.0.2",
     "fs-extra": "~0.8.1",
     "ftp": "~0.3.6",
@@ -33,6 +35,7 @@
     "nodemailer": "~0.6.1",
     "nodeunit": "~0.8.6",
     "passport": "^0.2.0",
+    "passport-auth0": "^0.1.0",
     "q": "^1.0.1",
     "redis": "~0.10.1",
     "request": "~2.34.0",
