--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "async": "~0.6.2",
     "async-q": "^0.2.1",
-    "bcrypt": "~0.7.7",
+    "bcrypt": "^0.7.7",
     "body-parser": "^1.0.1",
     "bower": "^1.3.2",
     "bower-update": "0.0.2",
@@ -23,6 +23,7 @@
     "express": "~4.0.0",
     "express-jwt": "^0.1.3",
     "express-session": "^1.0.2",
+    "express-validator": "^2.1.1",
     "fs-extra": "~0.8.1",
     "ftp": "~0.3.6",
     "line-reader": "~0.2.3",
@@ -32,7 +33,7 @@
     "mysql-queues": "~1.0.0",
     "node-fs": "~0.1.7",
     "node-schedule": "~0.1.13",
-    "nodemailer": "~0.6.1",
+    "nodemailer": "^0.6.3",
     "nodeunit": "~0.8.6",
     "passport": "^0.2.0",
     "passport-auth0": "^0.1.0",
@@ -40,6 +41,7 @@
     "redis": "~0.10.1",
     "request": "~2.34.0",
     "sequelize": "~1.7.0",
+    "sequelize-restful": "^0.1.0",
     "serve-static": "^1.0.4",
     "url": "~0.7.9"
   },
