--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "directories": {},
   "dependencies": {
     "async": "~0.6.2",
-    "async-q": "^0.2.1",
-    "bcrypt": "^0.7.7",
+    "async-q": "~0.2.1",
+    "bcrypt": "^0.7.8",
     "body-parser": "^1.0.1",
     "bower": "^1.3.2",
     "bower-update": "0.0.2",
@@ -37,6 +37,9 @@
     "nodeunit": "~0.8.6",
     "passport": "^0.2.0",
     "passport-auth0": "^0.1.0",
+    "passport-facebook": "^1.0.3",
+    "passport-google": "^0.3.0",
+    "passport-twitter": "^1.0.2",
     "q": "^1.0.1",
     "redis": "~0.10.1",
     "request": "~2.34.0",
