--- a/public/bower.json
+++ b/public/bower.json
@@ -28,11 +28,13 @@
     "auth0-angular": "~0.1.2",
     "q": "~2.0.0",
     "cryptojslib": "~3.1.2",
-    "angular-facebook": "~0.2.2"
+    "angular-facebook": "~0.2.2",
+    "angular-classy": "~0.4.2",
+    "angular-google-plus": "~0.1.2"
   },
   "dependencies": {},
   "resolutions": {
-    "angular": ">= 1.0.2",
+    "angular": "1.3.0-build.2600+sha.613a5cc",
     "angular-cookies": "~1.3.*"
   }
 }
