--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cluster": "~0.7.7",
     "colors": "~0.6.2",
     "compression": "^1.0.1",
+    "connect": "^2.15.0",
     "connect-redis": "^2.0.0",
     "cookie-parser": "^1.0.1",
     "cookie-session": "^1.0.1",
@@ -27,6 +28,7 @@
     "fs-extra": "~0.8.1",
     "ftp": "~0.3.6",
     "line-reader": "~0.2.3",
+    "lodash-node": "^2.4.1",
     "log4js": "~0.6.12",
     "mongodb": "~1.4.0",
     "mysql": "~2.1.1",
