--- a/public/bower.json
+++ b/public/bower.json
@@ -30,7 +30,10 @@
     "cryptojslib": "~3.1.2",
     "angular-facebook": "~0.2.2",
     "angular-classy": "~0.4.2",
-    "angular-google-plus": "~0.1.2"
+    "angular-google-plus": "~0.1.2",
+    "bootstrap-chosen": "https://github.com/alxlit/bootstrap-chosen.git",
+    "angular-chosen-localytics": "~1.0.6",
+    "lodash": "~2.4.1"
   },
   "dependencies": {},
   "resolutions": {
