--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^2.1.1",
     "fs-extra": "~0.8.1",
     "ftp": "~0.3.6",
+    "gzippo": "^0.2.0",
     "line-reader": "~0.2.3",
     "lodash-node": "^2.4.1",
     "log4js": "~0.6.12",
