--- a/public/bower.json
+++ b/public/bower.json
@@ -33,11 +33,13 @@
     "angular-google-plus": "~0.1.2",
     "bootstrap-chosen": "https://github.com/alxlit/bootstrap-chosen.git",
     "angular-chosen-localytics": "~1.0.6",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "ngActiveResource": "~0.7.7"
   },
   "dependencies": {},
   "resolutions": {
-    "angular": "1.3.0-build.2600+sha.613a5cc",
-    "angular-cookies": "~1.3.*"
+    "angular": "~1.3.*",
+    "angular-cookies": "~1.3.*",
+    "async": "~0.6.*"
   }
 }
