--- a/public/bower.json
+++ b/public/bower.json
@@ -5,7 +5,7 @@
     "angular": "~1.3.*",
     "angular-mocks": "~1.3.*",
     "bootstrap": "~3.1.*",
-    "angular-bootstrap": "~0.10.*",
+    "angular-bootstrap": "~0.11.0",
     "angular-ui-router": "~0.2.*",
     "angular-ui-utils": "~0.1.*",
     "angular-cookies": "~1.3.*",
@@ -34,7 +34,8 @@
     "bootstrap-chosen": "https://github.com/alxlit/bootstrap-chosen.git",
     "angular-chosen-localytics": "~1.0.6",
     "lodash": "~2.4.1",
-    "ngActiveResource": "~0.7.7"
+    "ngActiveResource": "~0.7.7",
+    "angular-strap": "~2.0.3"
   },
   "dependencies": {},
   "resolutions": {
