--- a/public/bower.json
+++ b/public/bower.json
@@ -35,7 +35,8 @@
     "angular-chosen-localytics": "~1.0.6",
     "lodash": "~2.4.1",
     "ngActiveResource": "~0.7.7",
-    "angular-strap": "~2.0.3"
+    "angular-strap": "~2.0.3",
+    "semantic": "~0.17.0"
   },
   "dependencies": {},
   "resolutions": {
