--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "lodash-node": "^2.4.1",
     "log4js": "~0.6.12",
     "mongodb": "~1.4.0",
+    "mongoose": "^3.8.12",
+    "mongoose-q": "0.0.10",
     "mysql": "~2.1.1",
     "mysql-queues": "~1.0.0",
     "node-fs": "~0.1.7",
@@ -51,7 +53,10 @@
     "sequelize-restful": "^0.1.0",
     "serve-static": "^1.0.4",
     "socket.io": "^0.9.16",
-    "url": "~0.7.9"
+    "url": "~0.7.9",
+    "chance": "^0.5.6",
+    "date-utils": "^1.2.15",
+    "dateformat": "^1.0.8-1.2.3"
   },
   "author": "stanley",
   "license": "BSD",
