--- a/public/bower.json
+++ b/public/bower.json
@@ -36,11 +36,12 @@
     "lodash": "~2.4.1",
     "ngActiveResource": "~0.7.7",
     "angular-strap": "~2.0.3",
-    "semantic": "~0.17.0"
+    "semantic": "~0.17.0",
+    "angular-resource": "~1.2.17"
   },
   "dependencies": {},
   "resolutions": {
-    "angular": "~1.3.*",
+    "angular": "1.3.0-build.2600+sha.613a5cc",
     "angular-cookies": "~1.3.*",
     "async": "~0.6.*"
   }
