--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.0.1",
     "bower": "^1.3.2",
     "bower-update": "0.0.2",
+    "chance": "^0.5.6",
     "cluster": "~0.7.7",
     "colors": "~0.6.2",
     "compression": "^1.0.1",
@@ -22,6 +23,8 @@
     "cors": "^2.2.0",
     "crypto": "0.0.3",
     "csurf": "^1.1.0",
+    "date-utils": "^1.2.15",
+    "dateformat": "^1.0.8-1.2.3",
     "express": "~4.0.0",
     "express-jwt": "^0.1.3",
     "express-session": "^1.0.2",
@@ -49,14 +52,11 @@
     "q": "^1.0.1",
     "redis": "~0.10.1",
     "request": "~2.34.0",
-    "sequelize": "~1.7.0",
+    "sequelize": "^1.7.8",
     "sequelize-restful": "^0.1.0",
     "serve-static": "^1.0.4",
     "socket.io": "^0.9.16",
-    "url": "~0.7.9",
-    "chance": "^0.5.6",
-    "date-utils": "^1.2.15",
-    "dateformat": "^1.0.8-1.2.3"
+    "url": "~0.7.9"
   },
   "author": "stanley",
   "license": "BSD",
