--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "compression": "^1.0.1",
     "connect": "^2.15.0",
     "connect-redis": "^2.0.0",
-    "cookie-parser": "^1.0.1",
+    "cookie-parser": "^1.3.2",
     "cookie-session": "^1.0.1",
     "cors": "^2.2.0",
     "crypto": "0.0.3",
@@ -62,7 +62,8 @@
     "validator": "^3.16.0",
     "nodeify": "^1.0.0",
     "then-redis": "^0.3.12",
-    "moment": "^2.7.0"
+    "moment": "^2.7.0",
+    "cookie": "^0.1.2"
   },
   "author": "stanley",
   "license": "BSD",
