--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "sequelize": "^1.7.8",
     "sequelize-restful": "^0.1.0",
     "serve-static": "^1.0.4",
-    "socket.io": "^0.9.16",
+    "socket.io": "^1.0.6",
     "url": "~0.7.9",
     "winston": "^0.7.3",
     "socket.io-wildcard": "^0.1.1",
@@ -65,7 +65,9 @@
     "moment": "^2.7.0",
     "cookie": "^0.1.2",
     "superagent": "^0.18.2",
-    "socket.io-client": "^1.0.6"
+    "socket.io-client": "^1.0.6",
+    "socket.io-redis": "^0.1.3",
+    "socketio-wildcard": "^0.1.1"
   },
   "author": "stanley",
   "license": "BSD",
