--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "superagent": "^0.18.2",
     "socket.io-client": "^1.0.6",
     "socket.io-redis": "^0.1.3",
-    "socketio-wildcard": "^0.1.1"
+    "socketio-wildcard": "^0.1.1",
+    "superagent-prefix": "0.0.2",
+    "agent-q": "0.0.3"
   },
   "author": "stanley",
   "license": "BSD",
