--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "directories": {},
   "dependencies": {
     "activesupport": "^0.1.1",
+    "agent-q": "0.0.3",
     "async": "~0.6.2",
     "async-q": "~0.2.1",
     "bcrypt": "^0.7.8",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.0.1",
     "bower": "^1.3.2",
     "bower-update": "0.0.2",
@@ -18,6 +20,7 @@
     "compression": "^1.0.1",
     "connect": "^2.15.0",
     "connect-redis": "^2.0.0",
+    "cookie": "^0.1.2",
     "cookie-parser": "^1.3.2",
     "cookie-session": "^1.0.1",
     "cors": "^2.2.0",
@@ -35,6 +38,7 @@
     "line-reader": "~0.2.3",
     "lodash-node": "^2.4.1",
     "log4js": "~0.6.12",
+    "moment": "^2.7.0",
     "mongodb": "~1.4.0",
     "mongoose": "^3.8.12",
     "mongoose-q": "0.0.10",
@@ -42,6 +46,7 @@
     "mysql-queues": "~1.0.0",
     "node-fs": "~0.1.7",
     "node-schedule": "~0.1.13",
+    "nodeify": "^1.0.0",
     "nodemailer": "^0.6.3",
     "nodeunit": "~0.8.6",
     "passport": "^0.2.0",
@@ -56,20 +61,18 @@
     "sequelize-restful": "^0.1.0",
     "serve-static": "^1.0.4",
     "socket.io": "^1.0.6",
-    "url": "~0.7.9",
-    "winston": "^0.7.3",
-    "socket.io-wildcard": "^0.1.1",
-    "validator": "^3.16.0",
-    "nodeify": "^1.0.0",
-    "then-redis": "^0.3.12",
-    "moment": "^2.7.0",
-    "cookie": "^0.1.2",
-    "superagent": "^0.18.2",
     "socket.io-client": "^1.0.6",
     "socket.io-redis": "^0.1.3",
+    "socket.io-wildcard": "^0.1.1",
     "socketio-wildcard": "^0.1.1",
+    "superagent": "^0.18.2",
     "superagent-prefix": "0.0.2",
-    "agent-q": "0.0.3"
+    "then-redis": "^0.3.12",
+    "url": "~0.7.9",
+    "validator": "^3.16.0",
+    "winston": "^0.7.3",
+    "googleapis": "^1.0.2",
+    "readline": "0.0.3"
   },
   "author": "stanley",
   "license": "BSD",
