--- a/public/package.json
+++ b/public/package.json
@@ -6,7 +6,7 @@
     "btoa": "~1.1.1",
     "canonical-json": "~0.0.4",
     "glob": "^3.2.9",
-    "grunt": "~0.4.4",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-banner": "~0.2.2",
     "grunt-contrib-clean": "~0.5.0",
