--- a/public/bower.json
+++ b/public/bower.json
@@ -39,7 +39,9 @@
     "semantic": "~0.17.0",
     "angular-resource": "~1.2.17"
   },
-  "dependencies": {},
+  "dependencies": {
+    "font-awesome": "~4.2.0"
+  },
   "resolutions": {
     "angular": "1.3.0-build.2600+sha.613a5cc",
     "angular-cookies": "~1.3.*",
