--- a/public/bower.json
+++ b/public/bower.json
@@ -37,7 +37,8 @@
     "ngActiveResource": "~0.7.7",
     "angular-strap": "~2.0.3",
     "semantic": "~0.17.0",
-    "angular-resource": "~1.2.17"
+    "angular-resource": "~1.2.17",
+    "superagent": "~0.19.0"
   },
   "dependencies": {
     "font-awesome": "~4.2.0"
