--- a/public/bower.json
+++ b/public/bower.json
@@ -39,7 +39,8 @@
     "semantic": "~0.17.0",
     "angular-resource": "~1.2.17",
     "superagent": "~0.19.0",
-    "growl": "~1.2.3"
+    "growl": "~1.2.3",
+    "fancybox": "~2.1.5"
   },
   "dependencies": {
     "font-awesome": "~4.2.0",
