--- a/scripts/config/nginx.conf
+++ b/scripts/config/nginx.conf
@@ -1,7 +1,14 @@
+#put this in http {} block
+upstream io_nodes {
+    ip_hash;
+    server 127.0.0.1:8080;
+    server 127.0.0.1:8080;
+}
+
 #simple nginx config file
 server {
     listen       9000;
-    server_name  auth.epouch.com;
+    server_name  cms.beaver.com;
     client_max_body_size 100M;
 
     # by default serve all static files from public folder
@@ -24,8 +31,14 @@ server {
         break;
     }
 
+    #forward socket.io to upstream node
     location ~ ^/socket.io/(.*) {
-	 proxy_pass http://127.0.0.1:8080/socket.io/$1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $host;
+    	proxy_http_version 1.1;
+    	proxy_pass http://io_nodes;
     }
 
     location /content/ {
