--- a/public/bower.json
+++ b/public/bower.json
@@ -45,7 +45,8 @@
   "dependencies": {
     "font-awesome": "~4.2.0",
     "angular-data": "~0.10.5",
-    "bootstrap-sidebar": "~0.2.1"
+    "bootstrap-sidebar": "~0.2.1",
+    "moment": "~2.8.3"
   },
   "resolutions": {
     "angular": "1.3.0-build.2600+sha.613a5cc",
