--- a/public/bower.json
+++ b/public/bower.json
@@ -46,7 +46,8 @@
     "font-awesome": "~4.2.0",
     "angular-data": "~0.10.5",
     "bootstrap-sidebar": "~0.2.1",
-    "moment": "~2.8.3"
+    "moment": "~2.8.3",
+    "restangular": "~1.4.0"
   },
   "resolutions": {
     "angular": "1.3.0-build.2600+sha.613a5cc",
